--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,7 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,pycharm
+
+dataset/
+.vscode
+env
