--- a/sweep.yaml
+++ b/sweep.yaml
@@ -5,8 +5,18 @@ metric:
   goal: maximize
 parameters:
   learning_rate:
-    values: [0.1, 0.01]
+    values: [0.001, 0.1]
   optimizer:
     values: ['SGD', 'Adam']
   scheduler:
     values: ['MultiStepLR', 'CosAnneal']
+  momentum:
+    values: [0.8, 0.99]
+  weight_decay:
+    values: [1e-5, 1e-2]
+  elr_lambda:
+    values: [0.1, 3.0]
+  elr_beta:
+    values:[0.5, 0.99]
+  batch_size:
+    values:[32, 64, 128, 256]
