--- a/sweep.yaml
+++ b/sweep.yaml
@@ -5,18 +5,28 @@ metric:
   goal: maximize
 parameters:
   learning_rate:
-    values: [0.001, 0.03]
+    distribution: log_uniform
+    min: -6.9
+    max: -3.5
   optimizer:
     values: ['SGD', 'Adam']
   scheduler:
     values: ['MultiStepLR', 'CosAnneal']
   momentum:
-    values: [0.8, 0.99]
+    distribution: uniform
+    min: 0.6
+    max: 0.99
   weight_decay:
-    values: [1e-5, 1e-2]
+    distribution: uniform
+    min: 1e-5
+    max: 1e-2
   elr_lambda:
-    values: [0.1, 3.0]
+    distribution: log_uniform
+    min: -2.3
+    max: 1.09
   elr_beta:
-    values:[0.5, 0.99]
+    distribution: uniform
+    min: 0.5
+    max: 0.99
   batch_size:
-    values:[32, 64, 128, 256]
+    values: [64, 128, 256]
